Fix menu bottom spacing

--- a/css/ibhr-omega.styles.css
+++ b/css/ibhr-omega.styles.css
@@ -91,7 +91,7 @@ body {
 .l-header {
   border-radius: 10px;
   border: 2px solid #4f899e;
-  padding: 1em;
+  padding: 1em 1em 0 1em;
   background: rgba(207, 242, 255, 0.85);
   -webkit-box-shadow: 1px 1px 3px 0px #5d5d5d;
           box-shadow: 1px 1px 3px 0px #5d5d5d;
@@ -145,7 +145,7 @@ body {
 .l-header #block-widgets-s-socialmedia-profile-default {
   position: absolute;
   right: 0;
-  top: 1em;
+  top: 3em;
   margin: 2px 10px 2px 2px;
 }
 
@@ -220,6 +220,7 @@ body {
   background: linear-gradient(to bottom, #ffffff 0%, #05abe0 100%);
   border: 1px solid #8d793f;
   border-radius: 5px;
+  margin-bottom: 0.5em;
 }
 #block-superfish-1 #superfish-1-toggle:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#2690a9), to(#0b2d36));
@@ -237,7 +238,7 @@ body {
   text-align: center;
   background-color: #bae8f3;
   border: 1px solid #49c3df;
-  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 #superfish-1-accordion li a {
   text-decoration: none;
