--- a/sass/components/_heder.scss
+++ b/sass/components/_heder.scss
@@ -1,7 +1,7 @@
 .l-header {
 	border-radius: 10px;
 	border: 2px solid #4f899e;
-	padding: 1em;
+	padding: 1em 1em 0 1em;
 	background: rgba(207, 242, 255, 0.85);
 	box-shadow: 1px 1px 3px 0px #5d5d5d;
 	overflow: visible;
@@ -57,7 +57,7 @@
 	#block-widgets-s-socialmedia-profile-default {
 		position: absolute;
 		right: 0;
-		top: 1em;
+		top: 3em;
 		margin: 2px 10px 2px 2px;
 	}
 }
